--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -5,10 +5,11 @@
     = stylesheet_link_tag 'application'
     = javascript_pack_tag 'application'
     = csrf_meta_tags
-
+    
   %body
-    %h1
-      = link_to "RottenPotatoes", movies_path
+    %header
+      %h1
+        = link_to "RottenPotatoes", movies_path
     #main
     -# this goes just inside %body:
   - if flash[:notice]
