--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -51,6 +51,9 @@ html, body {
     padding: 4px;
     text-align: left;
   }
+  table#movies tr:hover { 
+    background-color: yellow;
+  }
   #notice, #warning {
     background: rosybrown;
     margin: 1em 0;
