--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -17,7 +17,7 @@
       #login
     - if current_user
       %h3
-        = current_user.name
+        = "Welcome! #{current_user.name}"
       = link_to 'Log Out', destroy_user_session_path, :method => :delete
     - else
       %p.login= link_to "Sign in with GitHub", user_github_omniauth_authorize_path, method: :post
