--- a/app/views/movies/show.html.haml
+++ b/app/views/movies/show.html.haml
@@ -1,5 +1,3 @@
--# in app/views/movies/show.html.haml
-
 %h2 Details about #{@movie.title}
 
 %ul#details
@@ -11,8 +9,30 @@
     = @movie.release_date.strftime("%B %d, %Y")
 
 %h3 Description:
-
 %p#description= @movie.description
+%h3 Reviews:
+= link_to 'Add Review', new_movie_review_path(@movie)
+%ul#details
+  %li
+    Average potatoes:
+
+    - @movie.reviews.each do |review|
+      %tr
+      %td= review.potatoes
+
+  - @movie.reviews.each do |review|
+    %tr
+      %td name :
+      %td= review.user.name
+      %td | comments :
+      %tr
+        %td= review.comments
+        - if current_user
+          -if current_user.id == review.user_id
+            = link_to 'Edit review', edit_movie_review_path(@movie,review)
+            = link_to 'Delete review', movie_review_path(@movie,review), :method => :delete
+        
+        <br>
 
 = link_to 'Edit info', edit_movie_path(@movie)
 = link_to 'Delete', movie_path(@movie), :method => :delete
