--- a/app/views/movies/index.html.haml
+++ b/app/views/movies/index.html.haml
@@ -1,4 +1,10 @@
 -#  This file is app/views/movies/index.html.haml
+%h1 Search TMDb for a movie
+
+= form_tag :action => 'search_tmdb' do
+  <input id="search_terms" name="search_terms" type="text"/>
+  = submit_tag 'Search'
+  
 %h1 All Movies
 
 %table#movies
