--- a/app/views/movies/index.html.haml
+++ b/app/views/movies/index.html.haml
@@ -3,7 +3,7 @@
 
 = form_tag :action => 'search_tmdb' do
   <input id="search_terms" name="search_terms" type="text"/>
-  = submit_tag 'Search'
+  = submit_tag 'Search TMDb'
   
 %h1 All Movies
 
