--- a/app/views/movies/index.html.haml
+++ b/app/views/movies/index.html.haml
@@ -23,5 +23,5 @@
         %td= movie.rating
         %td= movie.release_date
         %td= link_to "More about #{movie.title}", movie_path(movie)
-
-= link_to 'Add new movie', new_movie_path
+- if current_user
+  = link_to 'Add new movie', new_movie_path
